--- a/style.css
+++ b/style.css
@@ -36,3 +36,62 @@ input::-webkit-inner-spin-button {
 .title-inside{
     height: fit-content;
 }
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.7rem 3rem;
+}
+.nav li{
+    list-style: none;
+}
+.nav h2{
+    color: white;
+    padding-inline: 3rem;
+}
+.nav button{
+    color: green;
+    font: bold;
+    padding-inline: 3rem;   
+    padding-block: 0.5rem;
+    border: none;
+    border-radius: 1rem;
+}
+.list{
+    min-height: 80vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-block: 1rem;
+    padding-inline: 1rem;
+}
+.task{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    margin: 2rem;
+    height: 30vh;
+    background-color: #d4dfde;
+    box-shadow: rgb(122, 122, 122) 2px 2px 10px;
+}
+.description{
+    font-size: medium;
+}
+.frequency{
+    font-size: medium;
+}
+.taskname{
+    font-size: xx-large;
+}
+.addPill{
+    position: fixed;
+    bottom: 2rem;
+    right: 4rem;
+    padding: 1rem;
+    color: white;
+    background-color: green;
+    border: none;
+    font-size: medium;
+    border-radius: 5rem;
+    box-sizing: border-box;
+}
